# mpc2000xl_kaitai

./: CMakeLists.txt  FORMAT_VERSION_NOTES.md  MPC2000XL_ALL_CONSUMPTION.md  MPC2000XL_MID_CONSUMPTION.md  MPC3000_SEQ_V3_GAP_AUDIT.md  MPC60_12BIT_SAMPLE_DECODER.md  MPC60_SET_CONSUMPTION.md  README.md  all.v3.ksy  mpc2000xl.all.ksy  mpc2000xl.all.seq.ksy  mpc2000xl.all.v1.ksy  mpc2000xl.aps.ksy  mpc2000xl.mid.ksy  mpc2000xl.pgm.ksy  mpc2000xl.snd.ksy  mpc3000.all.v3.ksy  mpc3000.aps.v3.ksy  mpc3000.pgm.v3.ksy  mpc3000.seq.v3.ksy  mpc3000.snd.v2.ksy  mpc60.all.body.ksy  mpc60.all.v1.ksy  mpc60.all.v2.ksy  mpc60.all.v3.ksy  mpc60.seq.body.ksy  mpc60.seq.v1.ksy  mpc60.seq.v2.ksy  mpc60.seq.v3.ksy  mpc60.set.v0.ksy  mpc60.set.v1.ksy  mpc60.snd.v1.ksy  seq.v3.ksy  standard_midi_file_with_running_status.ksy
src/: main.cpp
src/parser/: mpc2000xl_all.cpp  mpc2000xl_all.h
testdata/ALL/: 2-4over4-seqs-with-note60-in1-note61-in2.ALL  seq0-used-seq1-unused-seq2-used.ALL
testdata/ALL/seq-event-terminator-alignment/: event-in-seq-0-no-1-yes-2-no-3-yes-4-no.ALL  event-in-seq-0-yes-1-no-2-yes-3-no-4-yes.ALL  event-in-seq-0-yes-1-no-2-yes-3-no.ALL
testdata/aps-and-pgm-files-with-program-change-in-program-window/: PC1.APS  PC1.PGM  PC2.APS  PC2.PGM
testdata/aps-files-with-1-2-3-4-8-16-32-64-128-256-999-bars-of-3-over-4/: 1.ALL  128.ALL  16.ALL  2.ALL  256.ALL  3.ALL  32.ALL  4.ALL  64.ALL  8.ALL  999.ALL
testdata/aps-files-with-ascending-size/: ALL_PG01.APS  ALL_PG02.APS  ALL_PG03.APS  ALL_PG04.APS  ALL_PG05.APS  ALL_PG06.APS  ALL_PG24.APS
